fix: docs sidebar layout issue when announcementBar visible #8493

--- a/packages/docusaurus-theme-classic/src/theme/DocRoot/Layout/Sidebar/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocRoot/Layout/Sidebar/styles.module.css
@@ -34,6 +34,13 @@
     top: 0;
     position: sticky;
     height: 100%;
-    max-height: 100vh;
+    /* stylelint-disable custom-property-pattern */
+    max-height: clamp(
+      calc(100vh - var(--docusaurus-announcement-bar-height)),
+      calc(
+        100vh - (var(--docusaurus-announcement-bar-height) - var(--scroll-Y))
+      ),
+      100vh
+    );
   }
 }
